# libtinynotify-systemwide

./: Makefile.am  README  configure.ac  libtinynotify-systemwide.pc.in  sw-notify-send.c
doc/: Makefile.am  libtinynotify-systemwide-docs.sgml  libtinynotify-systemwide-sections.txt
lib/: tinynotify-systemwide.c  tinynotify-systemwide.h
